--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 	},
 	"dependencies": {
 		"@fortawesome/vue-fontawesome": "^3.0.5",
+		"axios": "^1.6.2",
 		"vue": "^3.3.4",
 		"vue-router": "^4.2.4"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^4.3.4",
-		"vite": "^4.5.1"
+		"eslint": "^8.55.0",
+		"eslint-plugin-vue": "^9.19.2",
+		"vite": "^4.5.1",
+		"vite-plugin-eslint": "^1.8.1"
 	}
 }
