--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
 	"name": "newvue",
 	"version": "0.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest --coverage"
 	},
 	"dependencies": {
 		"@fortawesome/vue-fontawesome": "^3.0.5",
 		"axios": "^1.6.2",
 		"vue": "^3.3.4",
-		"vue-router": "^4.2.4"
+		"vue-router": "^4.2.5"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^4.3.4",
+		"@vitejs/plugin-vue": "^4.5.2",
+		"@vue/test-utils": "^2.4.0-alpha.2",
 		"eslint": "^8.55.0",
 		"eslint-plugin-vue": "^9.19.2",
+		"happy-dom": "^12.10.3",
 		"vite": "^4.5.1",
-		"vite-plugin-eslint": "^1.8.1"
+		"vite-plugin-eslint": "^1.8.1",
+		"vitest": "^1.0.4"
 	}
 }
